Se linkea el css al index y se vincula la direccion del index para la practica

--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="./CSS/hojaestilos.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portafolio de Evidencias para Apps Moviles</title>
 </head>
 <body>
-    
+    <header>Jimenez Vazquez Eder Rodrigo</header>
+    <hr>
+    <br>
+    <h2>Este es el repositorio para la asignatura de Apps Moviles</h2>
+    <h3><a href="./DNI.js">Practica JavaScript 01</a></h3>
 </body>
 </html>
