Se linkea correctamente el index de la practica 01

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <hr>
     <br>
     <h2>Este es el repositorio para la asignatura de Apps Moviles</h2>
-    <h3><a href="./DNI.js">Practica JavaScript 01</a></h3>
+    <h3><a href="./01Practica_JavaScript/index.html">Practica JavaScript 01</a></h3>
 </body>
 </html>
