se cambia la direccion del script

--- a/01Practica_JavaScript/index.html
+++ b/01Practica_JavaScript/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practica JavaScript</title>
+    <link rel="stylesheet" href="./CSS/hojaestilos.css">
 </head>
 <body>
     <div class="form-container">
@@ -15,6 +16,6 @@
             <input type="button" value="Validar" id="btn-validar" class="btn">
         </form>
     </div>
-    <script src="./DNI.js"></script>
+    <script src="./JS/DNI.js"></script>
 </body>
 </html>
