se incronizan los ids del Js

--- a/01Practica_JavaScript/index.html
+++ b/01Practica_JavaScript/index.html
@@ -10,10 +10,10 @@
     <div class="form-container">
         <form>
             <h2>Ingrese su No. del DNI</h2>
-            <input type="text" id="txt-numdni" >
+            <input type="text" id="txt-numDNI" >
             <h3>Ingrese la letra</h3>
-            <input type="text" id="txt-letra" >
-            <input type="button" value="Validar" id="btn-validar" class="btn">
+            <input type="text" id="txt-letraDNI" >
+            <input type="button" value="Validar" id="btn-verificar" class="btn">
         </form>
     </div>
     <script src="./JS/DNI.js"></script>
